# rd-credibility

./: .gitignore  README.md  linkedin_post.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: methodology.md  quickstart.md
notebooks/: 01_methodology.ipynb
rd_credibility/: __init__.py
rd_credibility/app/: __init__.py  main.py
rd_credibility/app/components/: __init__.py  data_loader.py  learning_mode.py  replication.py  runner.py  sidebar.py  style.py
rd_credibility/app/pages/: 01_overview.py  02_density_test.py  03_covariate_balance.py  04_sensitivity.py  05_placebo.py  06_credibility_score.py  07_replication.py  __init__.py
rd_credibility/diagnostics/: __init__.py  bandwidth_grid.py  covariate_balance.py  donut.py  mccrary.py  placebo_cutoffs.py
rd_credibility/estimation/: __init__.py  bandwidth.py  kernels.py  rdrobust.py
rd_credibility/scoring/: __init__.py  credibility.py
rd_credibility/visualization/: __init__.py  covariate_grid.py  density_plot.py  export.py  placebo_plot.py  rd_plot.py  score_gauge.py  sensitivity_heatmap.py
tests/: __init__.py  test_app_components.py  test_diagnostics.py  test_estimation.py  test_fixtures.py  test_scoring.py  test_visualization.py
tests/fixtures/: __init__.py  synthetic_rd.py
