[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rd-credibility"
version = "0.1.0"
description = "A comprehensive tool for estimating and visualizing research and development credibility metrics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "RD Credibility Team"}]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "pandas>=2.0.0",
    "plotly>=5.13.0",
    "matplotlib>=3.7.0",
    "streamlit>=1.28.0",
    "scikit-learn>=1.2.0",
    "pytest>=7.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["rd_credibility"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = ["slow: marks tests as slow (deselect with -m 'not slow')"]

[tool.coverage.run]
omit = [
    "rd_credibility/app/main.py",
    "rd_credibility/app/pages/*",
    "rd_credibility/app/components/sidebar.py",
    "rd_credibility/app/components/runner.py",
    "rd_credibility/app/components/style.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
